# castep-periodic-table

./: .gitignore  Cargo.toml  README.md  element_table.yaml
src/: data.rs  element.rs  lib.rs
src/element/: element_info.rs  element_symbol.rs  mod.rs  yaml_parser.rs  yaml_to_rs.rs
src/element/element_symbol/: de.rs  error.rs  mod.rs
