[package]
name = "castep-periodic-table"
description = "Periodic-table-like database for relevant usage in CASTEP"
homepage = "https://github.com/TonyWu20/castep-periodic-table"
repository = "https://github.com/TonyWu20/castep-periodic-table"
version = "0.2.1"
edition = "2021"
license = "MIT"
keywords = ["chemistry", "CASTEP"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9.21"
serde = { version = "1.*", features = ["derive"] }
